--- a/my-app/package.json
+++ b/my-app/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
